--- a/conf/application.conf
+++ b/conf/application.conf
@@ -74,9 +74,14 @@ logger.application=DEBUG
 # Database
 //db.default.driver="org.sqlite.JDBC"
 //db.default.url="jdbc:sqlite:db.sqlite"
-
 db.default.driver=org.postgresql.Driver
-db.default.url = "jdbc:postgresql://ec2-23-21-219-209.compute-1.amazonaws.com:5432/d4q2652hkil24d?user=kzcfjfthukwifz&password=AFwbl3H3an_tZ8bCJkF2n3oKef&ssl=true&sslfactory=org.postgresql.ssl.NonValidatingFactory"
+db.default.url = "jdbc:postgresql://ec2-23-21-231-14.compute-1.amazonaws.com.amazonaws.com:5432/d25luardtrvne7?user=yaostzucqseayi&password=VQIPoJGynicnNjWeYR53K3guX0"
+
+
+
+# Debugging
+//db.default.driver=org.postgresql.Driver
+//db.default.url = "jdbc:postgresql://ec2-23-21-231-14.compute-1.amazonaws.com.amazonaws.com:5432/d25luardtrvne7?user=yaostzucqseayi&password=VQIPoJGynicnNjWeYR53K3guX0&ssl=true&sslfactory=org.postgresql.ssl.NonValidatingFactory"
 
 //
 //db.default.driver=com.mysql.jdbc.Driver
