--- a/conf/application.conf
+++ b/conf/application.conf
@@ -75,13 +75,13 @@ logger.application=DEBUG
 //db.default.driver="org.sqlite.JDBC"
 //db.default.url="jdbc:sqlite:db.sqlite"
 db.default.driver=org.postgresql.Driver
-db.default.url = "jdbc:postgresql://ec2-23-21-231-14.compute-1.amazonaws.com.amazonaws.com:5432/d25luardtrvne7?user=yaostzucqseayi&password=VQIPoJGynicnNjWeYR53K3guX0"
+db.default.url = "jdbc:postgresql://ec2-23-21-231-14.compute-1.amazonaws.com:5432/d25luardtrvne7?user=yaostzucqseayi&password=VQIPoJGynicnNjWeYR53K3guX0"
 
 
 
 # Debugging
 //db.default.driver=org.postgresql.Driver
-//db.default.url = "jdbc:postgresql://ec2-23-21-231-14.compute-1.amazonaws.com.amazonaws.com:5432/d25luardtrvne7?user=yaostzucqseayi&password=VQIPoJGynicnNjWeYR53K3guX0&ssl=true&sslfactory=org.postgresql.ssl.NonValidatingFactory"
+//db.default.url = "jdbc:postgresql://ec2-23-21-231-14.compute-1.amazonaws.com:5432/d25luardtrvne7?user=yaostzucqseayi&password=VQIPoJGynicnNjWeYR53K3guX0&ssl=true&sslfactory=org.postgresql.ssl.NonValidatingFactory"
 
 //
 //db.default.driver=com.mysql.jdbc.Driver
