--- a/conf/application.conf
+++ b/conf/application.conf
@@ -72,10 +72,8 @@ logger.application=DEBUG
 
 
 # Database
-//db.default.driver="org.sqlite.JDBC"
-//db.default.url="jdbc:sqlite:db.sqlite"
-//db.default.driver=org.postgresql.Driver
-//db.default.url = "jdbc:postgresql://ec2-23-21-231-14.compute-1.amazonaws.com:5432/d25luardtrvne7?user=yaostzucqseayi&password=VQIPoJGynicnNjWeYR53K3guX0"
+db.default.driver=org.postgresql.Driver
+db.default.url = "jdbc:postgresql://localhost:5432/?user=postgres&password=1234"
 
 
 
