Add Account list and delete page also edit some model about cascading and add Account controller for admin

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -72,8 +72,8 @@ logger.application=DEBUG
 
 
 # Database
-db.default.driver = org.postgresql.Driver
-db.default.url = "jdbc:postgresql://localhost:5432/?user=postgres&password=1234"
+//db.default.driver = org.postgresql.Driver
+//db.default.url = "jdbc:postgresql://localhost:5432/?user=postgres&password=1234"
 
 
 
@@ -82,7 +82,7 @@ db.default.url = "jdbc:postgresql://localhost:5432/?user=postgres&password=1234"
 //db.default.url = "jdbc:postgresql://ec2-23-21-231-14.compute-1.amazonaws.com:5432/d25luardtrvne7?user=yaostzucqseayi&password=VQIPoJGynicnNjWeYR53K3guX0&ssl=true&sslfactory=org.postgresql.ssl.NonValidatingFactory"
 
 //
-//db.default.driver=com.mysql.jdbc.Driver
-//db.default.url="jdbc:mysql://localhost/exceed"
-//db.default.user="root"
-//db.default.pass=""
+db.default.driver=com.mysql.jdbc.Driver
+db.default.url="jdbc:mysql://localhost/exceed"
+db.default.user="root"
+db.default.pass=""
